--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 
         Lukang Sun has joined my group as a PhD student. Welcome!!!
 
-        Lukang has an MPhil degree in mathematics form Nanjing Univeristy, China (2020), and a BA in mathematics from Jilin Univeristy, China (2017). His thesis (written in Chinese) was on the topic of
+        Lukang has an MPhil degree in mathematics form Nanjing University, China (2020), and a BA in mathematics from Jilin University, China (2017). His thesis (written in Chinese) was on the topic of
         "Harmonic functions on metric measure spaces". In this work, Lukang proposed some novel methods using optimal transport theory to generalize some results from Riemannian manifolds to metric measure
-        spaces. Lukang has held visiting/exchange/temporary positions at the Hong Kong Universiy of Science and Technology, Georgia Institue of Technology and the Chinese University of Hong Kong.
+        spaces. Lukang has held visiting/exchange/temporary positions at the Hong Kong University of Science and Technology, Georgia Institute of Technology, and the Chinese University of Hong Kong.
 
 
           <br>
