--- a/i_team.html
+++ b/i_team.html
@@ -70,6 +70,7 @@
           <h2>PhD Students </h2>
           <ul>
             <li>Lukang Sun (3/2021-present)</li>
+            <li><a href="https://slavomirhanzely.wordpress.com">Slavomír Hanzely</a> (1/2021-present)</li>
             <li><a href="https://cemse.kaust.edu.sa/news/meet-kaust-student-konstantin-burlachenko?fbclid=IwAR2KCPy-X1C4Ls8u9rhlkNwqdRqONaKPqHdXzmBq_lSNDpOjGxVBM-o0DZE">Konstantin Burlachenko</a> (08/2020-present)</li>
             <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a> (1/2020-present)</li>
             <li><a href="http://elnurgasanov.me">Elnur Gasanov</a> (1/2020-present)</li>
@@ -88,8 +89,8 @@
             <li>Igor Sokolov (8/2020-present)</li>
             <li><a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> (8/2020-present)</li>
             <li><a href="https://shulgin-egor.github.io">Egor Shulgin</a> (1/2020-present)</li>
-            <li><a href="https://alyazeedbasyoni.wixsite.com/blog">Alyazeed Basyoni</a> (8/2019-present)</li>
-            <li><a href="https://slavomirhanzely.wordpress.com">Slavomír Hanzely</a> (8/2019-present)</li>
+            <li><a href="https://alyazeedbasyoni.wixsite.com/blog">Alyazeed Basyoni</a> (8/2019-12/2020)</li>
+            <li><a href="https://slavomirhanzely.wordpress.com">Slavomír Hanzely</a> (8/2019-12/2020)</li>
             <li><a href="http://elnurgasanov.me">Elnur Gasanov</a> (9/2018-12/2019)</li>
             <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a> (9/2018-12/2019)</li>
             <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a> (8/2017-12/2018)</li>
@@ -101,7 +102,7 @@
           <ul>
 
             <li><a href="https://scholar.google.com/citations?user=G2OzFpIAAAAJ&hl=en">Ilyas Fatkhullin</a> (Technical University Munich), 3/2021-8/2021 </li>
-            <li><a href="https://rustem-islamov.github.io">Rustem Islamov</a> (Moscow Institute of Physics and Technology), 3/2021-8/2020</li>
+            <li><a href="https://rustem-islamov.github.io">Rustem Islamov</a> (Moscow Institute of Physics and Technology), 3/2021-8/2021</li>
             <li> Bokun Wang (University of California, Davis), 9/2020-3/2021</li>
             <li><a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 9/2020-3/2021</li>
             <li> Wenlin Chen (University of Cambridge), 8/2020-9/2020</li>
