--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@ Jacob Nelson, Panos Kalnis, Changhoon Kim, Arvind Krishnamurthy, Masoud Moshref,
 
 
           Me and the members of my group will be attending <a href="https://neurips.cc/virtual/2020/public/index.html">NeurIPS 2020</a> - the event is starting today.
-          Marco Cuturi and me will co-chair the <a href="https://neurips.cc/virtual/2020/public/session_oral_21084.html">Optimization session (Trac 21) on Wednesday</a>. I am particularly looking forward to the workshops: <a href="https://opt-ml.org">OPT2020</a>, <a href="https://ppml-workshop.github.io">PPML</a> and <a href="http://128.1.38.43/SpicyFL/2020/">SpicyFL.</a>
+          Marco Cuturi and me will co-chair the <a href="https://neurips.cc/virtual/2020/public/session_oral_21084.html">Optimization session (Track 21) on Wednesday</a>. I am particularly looking forward to the workshops: <a href="https://opt-ml.org">OPT2020</a>, <a href="https://ppml-workshop.github.io">PPML</a> and <a href="http://128.1.38.43/SpicyFL/2020/">SpicyFL.</a>
           <br>
 
           <br>
