--- a/i_papers.html
+++ b/i_papers.html
@@ -102,7 +102,7 @@
 
           [151] Samuel Horváth, Aaron Klein, Peter Richtárik and Cedric Archambeau<br>
           <b>Hyperparameter transfer learning with adaptive complexity</b><br>
-          The 24th International Conference on Artificial Intelligence and Statistics (AISTATS 2021) <br>
+          <a href="http://proceedings.mlr.press/v130/horvath21a.html">The 24th International Conference on Artificial Intelligence and Statistics (AISTATS 2021)</a> <br>
           [<a href="https://arxiv.org/abs/2102.12810">arXiv</a>]  <br>
           <br>
 
@@ -121,14 +121,14 @@
 
           [148] Eduard Gorbunov, Filip Hanzely, and Peter Richtárik<br>
           <b>Local SGD: unified theory and new efficient methods</b><br>
-          The 24th International Conference on Artificial Intelligence and Statistics (AISTATS 2021) <br>
+          <a href="http://proceedings.mlr.press/v130/gorbunov21a.html">The 24th International Conference on Artificial Intelligence and Statistics (AISTATS 2021) </a><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2011.02828">arXiv</a>] [code: S-Local-SVRG] <br>
           <br>
 
           [147] Dmitry Kovalev, Anastasia Koloskova, Martin Jaggi, Peter Richtárik, and Sebastian U. Stich<br>
           <b>A linearly convergent algorithm for decentralized optimization: sending less bits for free!</b><br>
-          The 24th International Conference on Artificial Intelligence and Statistics (AISTATS 2021) <br>
+          <a href="http://proceedings.mlr.press/v130/kovalev21a.html">The 24th International Conference on Artificial Intelligence and Statistics (AISTATS 2021)</a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2011.01697">arXiv</a>]  <br>
           <br>
@@ -370,7 +370,7 @@
 
           [110] Xun Qian, Zheng Qu and Peter Richtárik<br>
           <b>L-SVRG and L-Katyusha with arbitrary sampling</b><br>
-          Accepted to Journal of Machine Learning Research <br>
+          Journal of Machine Learning Research, 2021 <br>
           [<a href="https://arxiv.org/abs/1906.01481">arXiv</a>] [code: L-SVRG, L-Katyusha]<br>
           <br>
 
