--- a/i_papers.html
+++ b/i_papers.html
@@ -142,6 +142,7 @@
 
           [145] Eduard Gorbunov, Dmitry Kovalev, Dmitry Makarenko, and Peter Richtárik<br>
           <b>Linearly converging error compensated SGD</b><br>
+          <a href="https://papers.nips.cc/paper/2020/hash/ef9280fbc5317f17d480e4d4f61b3751-Abstract.html">Advances in Neural Information Processing Systems 33 (NeurIPS 2020)</a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2010.12292">arXiv</a>] [code: EC-SGD-DIANA, EC-LSVRG-DIANA, EC-LSVRGstar, ...]  <br>
           <br>
@@ -155,7 +156,7 @@
 
           [143] Filip Hanzely, Slavomír Hanzely, Samuel Horváth, and Peter Richtárik<br>
           <b>Lower bounds and optimal algorithms for personalized federated learning</b><br>
-          NeurIPS 2020 <br>
+          <a href="https://papers.nips.cc/paper/2020/hash/187acf7982f3c169b3075132380986e4-Abstract.html">Advances in Neural Information Processing Systems 33 (NeurIPS 2020)</a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2010.02372">arXiv</a>] [code: APGD1, APGD2, IAPGD, AL2SGD+]  <br>
           <br>
@@ -194,7 +195,7 @@
 
           [137] Dmitry Kovalev, Adil Salim, and Peter Richtárik <br>
           <b>Optimal and practical algorithms for smooth and strongly convex decentralized optimization</b><br>
-          NeurIPS 2020 <br>
+          <a href="https://papers.nips.cc/paper/2020/hash/d530d454337fb09964237fecb4bea6ce-Abstract.html">Advances in Neural Information Processing Systems 33 (NeurIPS 2020) </a><br>
           [<a href="https://arxiv.org/abs/2006.11773">arXiv</a>] [code: APAPC, OPAPC, Algorithm 3]  <br>
           <br>
 
@@ -214,7 +215,7 @@
 
           [134] Adil Salim and Peter Richtárik <br>
           <b>Primal dual interpretation of the proximal stochastic gradient Langevin algorithm</b><br>
-          NeurIPS 2020 <br>
+          <a href="https://papers.nips.cc/paper/2020/hash/2779fda014fbadb761f67dd708c1325e-Abstract.html">Advances in Neural Information Processing Systems 33 (NeurIPS 2020)</a> <br>
           [<a href="https://arxiv.org/abs/2006.09270">arXiv</a>] [code: PGSLA]  <br>
           <br>
 
@@ -227,7 +228,7 @@
 
           [132] Konstantin Mishchenko, Ahmed Khaled, and Peter Richtárik <br>
           <b>Random reshuffling: simple analysis with vast improvements</b> <br>
-          NeurIPS 2020 <br>
+          <a href="https://papers.nips.cc/paper/2020/hash/c8cc6e90ccbff44c9cee23611711cdc4-Abstract.html">Advances in Neural Information Processing Systems 33 (NeurIPS 2020)</a> <br>
           [<a href="https://arxiv.org/abs/2006.05988">arXiv</a>]  [<a href="https://github.com/konstmish/random_reshuffling">code</a>: RR, SO, IG] <br>
           <br>
 
@@ -603,9 +604,9 @@ src="file:///Users/richtap/Documents/WORK/GitHub/My%20GitHub%20Pages%20website/i
               width="17" height="15" border="0"></a>]<br>
           <br>
 
-          [79] Filip Hanzely, Peter Richtárik and Lin Xiao<b><br>
-            Accelerated Bregman proximal gradient methods for relatively
-            smooth convex optimization</b><br>
+          [79] Filip Hanzely, Peter Richtárik and Lin Xiao<br>
+          <b>Accelerated Bregman proximal gradient methods for relatively smooth convex optimization</b><br>
+          Computational Optimization and Applications <br>
           [<a href="https://arxiv.org/abs/1808.03045">arXiv</a>] [code:
           <a href="https://github.com/Microsoft/accbpg">ABPG, ABDA</a>]<br>
           <br>
