--- a/i_papers.html
+++ b/i_papers.html
@@ -87,7 +87,7 @@
           [153] Rustem Islamov, Xun Qian and Peter Richtárik<br>
           <b>Distributed second order methods with fast rates and compressed communication</b><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2102.07158">arXiv</a>] [code: NS, MN, NL1, NL2, CNL]  <br>
+          [<a href="https://arxiv.org/abs/2102.07158">arXiv</a>] [code: NS, MN, NL1, NL2, CNL] [<a href="posters/Poster-Newton-Learn">poster</a>]  <br>
           <br>
 
           [152] Konstantin Mishchenko, Ahmed Khaled and Peter Richtárik<br>
