--- a/i_papers.html
+++ b/i_papers.html
@@ -63,6 +63,7 @@
 
           [157] Dmitry Kovalev, Egor Shulgin, Peter Richtárik, Alexander Rogozin and Alexander Gasnikov<br>
           <b>ADOM: Accelerated decentralized optimization method for time-varying networks</b><br>
+          <a href="https://sites.google.com/ucsd.edu/cedo/"> NSF-TRIPODS Workshop: Communication Efficient Distributed Optimization </a> <br>
           [<a href="https://arxiv.org/abs/2102.09234">arXiv</a>] [code: ADOM] <br>
           <br>
 
@@ -80,18 +81,22 @@
 
           [154] Mher Safaryan, Filip Hanzely and Peter Richtárik<br>
           <b>Smoothness matrices beat smoothness constants: better communication compression techniques for distributed optimization</b><br>
+          <a href="https://dp-ml.github.io/2021-workshop-ICLR/">ICLR Workshop: Distributed and Private Machine Learning </a><br>
+          <a href="https://sites.google.com/ucsd.edu/cedo/"> NSF-TRIPODS Workshop: Communication Efficient Distributed Optimization </a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2102.07245">arXiv</a>] [code: DCGD+, DIANA+, ADIANA+] <br>
           <br>
 
           [153] Rustem Islamov, Xun Qian and Peter Richtárik<br>
           <b>Distributed second order methods with fast rates and compressed communication</b><br>
+          <a href="https://sites.google.com/ucsd.edu/cedo/"> NSF-TRIPODS Workshop: Communication Efficient Distributed Optimization </a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2102.07158">arXiv</a>] [<a href="posters/Poster-Newton-Learn.pdf">poster</a>] [code: NS, MN, NL1, NL2, CNL]   <br>
           <br>
 
           [152] Konstantin Mishchenko, Ahmed Khaled and Peter Richtárik<br>
           <b>Proximal and federated random reshuffling</b><br>
+          <a href="https://sites.google.com/ucsd.edu/cedo/"> NSF-TRIPODS Workshop: Communication Efficient Distributed Optimization </a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2102.06704">arXiv</a>] [code:ProxRR, FedRR] <br>
           <br>
