--- a/i_papers.html
+++ b/i_papers.html
@@ -91,7 +91,7 @@
           <b>Distributed second order methods with fast rates and compressed communication</b><br>
           <a href="https://sites.google.com/ucsd.edu/cedo/"> NSF-TRIPODS Workshop: Communication Efficient Distributed Optimization </a> <br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2102.07158">arXiv</a>] [<a href="posters/Poster-Newton-Learn.pdf">poster</a>] [code: NS, MN, NL1, NL2, CNL]   <br>
+          [<a href="https://arxiv.org/abs/2102.07158">arXiv</a>] [slides] [<a href="posters/Poster-Newton-Learn.pdf">poster</a>] [code: NS, MN, NL1, NL2, CNL]   <br>
           <br>
 
           [152] Konstantin Mishchenko, Ahmed Khaled and Peter Richtárik<br>
