--- a/index.html
+++ b/index.html
@@ -43,6 +43,24 @@
         <div id="content">
 
 
+          <h3>April 7, 2021</h3>
+          <h1>Talk at All Russian Seminar in Optimization</h1>
+          <br>
+
+        Today I am giving a talk at the <a href="http://www.mathnet.ru/php/conference.phtml?&eventID=31&confid=1794&option_lang=eng">All Russian Seminar in Optimization.</a> I am talking about the paper <a href="https://arxiv.org/abs/2102.07158">``Distributed Second Order Methods with Fast Rates and Compressed Communication''</a>, which is joint work
+        <a href="https://rustem-islamov.github.io">Rustem Islamov</a> and <a href="https://qianxunk.github.io">Xun Qian</a>. The talk was recorded  and will eventually be put on <a href="https://www.youtube.com/user/PreMoLab/videos">YouTube</a>.
+        Here are the <a href="talks/TALK-2021-Newton-Learn.pdf">slides from my talk, and here is a
+          <a href="posters/Poster-Newton-Learn.pdf"> poster </a> that will son be presented by Rustem Islamov at the <a href="https://sites.google.com/ucsd.edu/cedo/">NSF-TRIPODS Workshop on Communication Efficient Distributed Optimization.</a>
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
 
           <h3>March 24, 2021</h3>
           <h1>Mishchenko and Gorbunov: ICLR 2021 Outstanding Reviewer Award</h1>
