--- a/i_talks.html
+++ b/i_talks.html
@@ -47,9 +47,6 @@
 
 <h1> Postponed Talks</h1>
 
-<p>
-"Optimization for Machine Learning", <a href="https://ima.org.uk/14347/14347/">3rd Mathematics of Operational Research conference</a>, Aston University, Birmingham (UK),  April 22-23, 2021
-</p>
 
 <p>
 <a href="https://ims.nus.edu.sg/events/2020/opt/index.php">Fast Optimization Algorithms in the Big Data Era</a>, Institute
@@ -168,16 +165,25 @@ Simons Institute, Berkeley, 10/2013
 <h1>2021 Talks</h1>
 
 <p>
-AMCS/STAT Graduate Seminar, KAUST, April 22, 2021 (invited)
+[176] "Optimization for Machine Learning", <a href="https://ima.org.uk/14347/14347/">3rd Mathematics of Operational Research conference</a>, Aston University, Birmingham (UK),  April 22-23, 2021
 </p>
 
 <p>
-All Russian Seminar on Optimization, virtual, April 21, 2021 (invited)
+[175] AMCS/STAT Graduate Seminar, KAUST, April 22, 2021 (invited)
+</p>
+
+<p>
+[174] <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">Federated Learning One World Seminar</a>, virtual, April 14, 2021
+</p>
+
+<p>
+[173] <a href="http://www.mathnet.ru/php/conference.phtml?&eventID=31&confid=1794&option_lang=eng">All Russian Seminar on Optimization</a>, virtual, April 7, 2021 (invited)
 </p>
 
 <p>
 [172] Research Seminar, <a href="https://mbzuai.ac.ae">MBZUAI</a>, Abu Dhabi, Febraury 16, 2021 (invited)
 </p>
+
 
 
 <h1>2020 Talks</h1>
