--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
          <br><br>
          The talk was recorded and will eventually be put on <a href="https://www.youtube.com/user/PreMoLab/videos">YouTube</a>.
-        Here are the <a href="talks/TALK-2021-Newton-Learn.pdf">slides from my talk, and here is a
+        Here are the <a href="talks/TALK-2021-Newton-Learn.pdf">slides from my talk</a>, and here is a
           <a href="posters/Poster-Newton-Learn.pdf"> poster </a> that will son be presented by Rustem Islamov at the <a href="https://sites.google.com/ucsd.edu/cedo/">NSF-TRIPODS Workshop on Communication Efficient Distributed Optimization.</a>
           <br>
 
