--- a/i_papers.html
+++ b/i_papers.html
@@ -128,7 +128,7 @@
           <b>Local SGD: unified theory and new efficient methods</b><br>
           <a href="http://proceedings.mlr.press/v130/gorbunov21a.html">The 24th International Conference on Artificial Intelligence and Statistics (AISTATS 2021) </a><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2011.02828">arXiv</a>] [code: S-Local-SVRG] <br>
+          [<a href="https://arxiv.org/abs/2011.02828">arXiv</a>] [<a href="posters/Poster-Local-SGD-AISTATS-2021.pdf">poster</a>] [code: S-Local-SVRG] <br>
           <br>
 
           [147] Dmitry Kovalev, Anastasia Koloskova, Martin Jaggi, Peter Richtárik, and Sebastian U. Stich<br>
