--- a/index.html
+++ b/index.html
@@ -43,6 +43,77 @@
         <div id="content">
 
 
+
+
+
+
+
+
+
+          <h3>April 14, 2021</h3>
+          <h1>Talk at FLOW</h1>
+          <br>
+
+        Today I am giving a talk entitled "Beyond Local and Gradient Methods for Federated Learning" at
+        the <a href="https://sites.google.com/view/one-world-seminar-series-flow/home">Federated Learning One World Seminar (FLOW).</a>
+        After a brief motivation spent on bashing gradient and local methods, I will talk about
+        the paper <a href="https://arxiv.org/abs/2102.07158">Distributed Second Order Methods with Fast Rates and Compressed Communication</a>.
+        This is joint work with my fantastic intern <a href="https://rustem-islamov.github.io">Rustem Islamov</a> (KAUST and MIPT) and fantastic
+        postdoc <a href="https://qianxunk.github.io">Xun Qian</a> (KAUST).
+
+
+
+         <br><br>
+         The talk was recorded and will be uploaded to the <a href="https://www.youtube.com/channel/UCpAXM9I-v76xEPtevcCuA5g/videos">FLOW YouTube channel.</a>
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
+
+          <h3>April 13, 2021</h3>
+          <h1>Three Papers Presented at AISTATS 2021</h1>
+            <br>
+We've had three papers accepted to <a href="https://aistats.org/aistats2021/">The 24th International Conference on Artificial Intelligence and Statistics (AISTATS 2021)</a>. The conference will be held virtually over the next few days; during April 13-15, 2021. Here are the papers:<br><br>
+
+
+1. <a href="http://proceedings.mlr.press/v130/kovalev21a.html">A linearly convergent algorithm for decentralized optimization: sending less bits for free!</a>, joint work with  <a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a>, <a href="https://scholar.google.com/citations?user=ldJpvE8AAAAJ&hl=en">Anastasia Koloskova</a>, <a href="https://people.epfl.ch/martin.jaggi/?lang=en">Martin Jaggi</a>, and <a href="https://www.sstich.ch">Sebastian U. Stich</a>.<br><br>
+
+<i>Abstract:</i>  Decentralized optimization methods enable on-device training of machine learning models without a central coordinator. In many scenarios communication between devices is energy demanding and time consuming and forms the bottleneck of the entire system.
+We propose a new randomized first-order method which tackles the communication bottleneck by applying randomized compression operators to the communicated messages. By combining our scheme with a new variance reduction technique that progressively throughout the iterations reduces the adverse effect of the injected quantization noise, we obtain the first scheme that converges linearly on strongly convex decentralized problems while using compressed communication only.
+We prove that our method can solve the problems without any increase in the number of communications compared to the baseline which does not perform any communication compression while still allowing for a significant compression factor which depends on the conditioning of the problem and the topology of the network. Our key theoretical findings are supported by numerical experiments. <br> <br>
+
+
+2. <a href="http://proceedings.mlr.press/v130/gorbunov21a.html">Local SGD: unified theory and new efficient methods</a>, joint work with  <a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> and <a href="https://fhanzely.github.io">Filip Hanzely</a>.<br><br>
+
+<i>Abstract:</i> We present a unified framework for analyzing local SGD methods in the convex and strongly convex regimes for distributed/federated training of supervised machine learning models. We recover several known methods as a special case of our general framework, including Local-SGD/FedAvg, SCAFFOLD, and several variants of SGD not originally designed for federated learning. Our framework covers both the identical and heterogeneous data settings, supports both random and deterministic number of local steps, and can work with a wide array of local stochastic gradient estimators, including shifted estimators which are able to adjust the fixed points of local iterations for faster convergence. As an application of our framework, we develop multiple novel FL optimizers which are superior to existing methods. In particular, we develop the first linearly converging local SGD method which does not require any data homogeneity or other strong assumptions. <br> <br>
+
+
+<a href="posters/Poster-Local-SGD-AISTATS-2021.pdf"> <img alt="" src="posters/Poster-Local-SGD-AISTATS-2021-small.png" width="700" ></a>
+<br>
+
+
+3. <a href="http://proceedings.mlr.press/v130/horvath21a.html">Hyperparameter transfer learning with adaptive complexity</a>, joint work with  <a href="https://samuelhorvath.github.io">Samuel Horváth</a> and <a href="https://aaronkl.github.io">Aaron Klein</a>, and <a href="http://www0.cs.ucl.ac.uk/staff/c.archambeau/">Cedric Archambeau</a>.<br><br>
+
+<i>Abstract:</i>  Bayesian optimization (BO) is a data-efficient approach to automatically tune the hyperparameters of machine learning models. In practice, one frequently has to solve similar hyperparameter tuning problems sequentially. For example, one might have to tune a type of neural network learned across a series of different classification problems. Recent work on multi-task BO exploits knowledge gained from previous hyperparameter tuning tasks to speed up a new tuning task. However, previous approaches do not account for the fact that BO is a sequential decision making procedure. Hence, there is in general a mismatch between the number of evaluations collected in the current tuning task compared to the number of evaluations accumulated in all previously completed tasks. In this work, we enable multi-task BO to compensate for this mismatch, such that the transfer learning procedure is able to handle different data regimes in a principled way. We propose a new multi-task BO method that learns a set of ordered, non-linear basis functions of increasing complexity via nested drop-out and automatic relevance determination. Experiments on a variety of hyperparameter tuning problems show that our method improves the sample efficiency of recently published multi-task BO methods.
+<br>
+
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
+
+
           <h3>April 7, 2021</h3>
           <h1>Talk at All Russian Seminar in Optimization</h1>
           <br>
@@ -425,18 +496,21 @@ I am teaching <a href="https://piazza.com/kaust.edu.sa/spring2021/cs332">CS 332:
 We've had some papers accepted to <a href="https://aistats.org/aistats2021/">The 24th International Conference on Artificial Intelligence and Statistics (AISTATS 2021)</a>. The conference will be held virtually during April 13-15, 2021. Here are the papers:<br><br>
 
 
-1. <a href="https://arxiv.org/abs/2011.01697">"A linearly convergent algorithm for decentralized optimization: sending less bits for free!”</a>, joint work with  <a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a>, <a href="https://scholar.google.com/citations?user=ldJpvE8AAAAJ&hl=en">Anastasia Koloskova</a>, <a href="https://people.epfl.ch/martin.jaggi/?lang=en">Martin Jaggi</a>, and <a href="https://www.sstich.ch">Sebastian U. Stich</a>.<br><br>
+1. <a href="http://proceedings.mlr.press/v130/kovalev21a.html">A linearly convergent algorithm for decentralized optimization: sending less bits for free!</a>, joint work with  <a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a>, <a href="https://scholar.google.com/citations?user=ldJpvE8AAAAJ&hl=en">Anastasia Koloskova</a>, <a href="https://people.epfl.ch/martin.jaggi/?lang=en">Martin Jaggi</a>, and <a href="https://www.sstich.ch">Sebastian U. Stich</a>.<br><br>
 
 <i>Abstract:</i>  Decentralized optimization methods enable on-device training of machine learning models without a central coordinator. In many scenarios communication between devices is energy demanding and time consuming and forms the bottleneck of the entire system.
 We propose a new randomized first-order method which tackles the communication bottleneck by applying randomized compression operators to the communicated messages. By combining our scheme with a new variance reduction technique that progressively throughout the iterations reduces the adverse effect of the injected quantization noise, we obtain the first scheme that converges linearly on strongly convex decentralized problems while using compressed communication only.
 We prove that our method can solve the problems without any increase in the number of communications compared to the baseline which does not perform any communication compression while still allowing for a significant compression factor which depends on the conditioning of the problem and the topology of the network. Our key theoretical findings are supported by numerical experiments. <br> <br>
 
 
-2. <a href="https://arxiv.org/abs/2011.02828">"Local SGD: unified theory and new efficient methods”</a>, joint work with  <a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> and <a href="https://fhanzely.github.io">Filip Hanzely</a>.<br><br>
+2. <a href="http://proceedings.mlr.press/v130/gorbunov21a.html">Local SGD: unified theory and new efficient methods</a>, joint work with  <a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a> and <a href="https://fhanzely.github.io">Filip Hanzely</a>.<br><br>
 
 <i>Abstract:</i> We present a unified framework for analyzing local SGD methods in the convex and strongly convex regimes for distributed/federated training of supervised machine learning models. We recover several known methods as a special case of our general framework, including Local-SGD/FedAvg, SCAFFOLD, and several variants of SGD not originally designed for federated learning. Our framework covers both the identical and heterogeneous data settings, supports both random and deterministic number of local steps, and can work with a wide array of local stochastic gradient estimators, including shifted estimators which are able to adjust the fixed points of local iterations for faster convergence. As an application of our framework, we develop multiple novel FL optimizers which are superior to existing methods. In particular, we develop the first linearly converging local SGD method which does not require any data homogeneity or other strong assumptions. <br> <br>
 
-3. "Hyperparameter transfer learning with adaptive complexity”, joint work with  <a href="https://samuelhorvath.github.io">Samuel Horváth</a> and <a href="https://aaronkl.github.io">Aaron Klein</a>, and <a href="http://www0.cs.ucl.ac.uk/staff/c.archambeau/">Cedric Archambeau</a>.<br>
+3. <a href="http://proceedings.mlr.press/v130/horvath21a.html">Hyperparameter transfer learning with adaptive complexity</a>, joint work with  <a href="https://samuelhorvath.github.io">Samuel Horváth</a> and <a href="https://aaronkl.github.io">Aaron Klein</a>, and <a href="http://www0.cs.ucl.ac.uk/staff/c.archambeau/">Cedric Archambeau</a>.<br><br>
+
+<i>Abstract:</i>  Bayesian optimization (BO) is a data-efficient approach to automatically tune the hyperparameters of machine learning models. In practice, one frequently has to solve similar hyperparameter tuning problems sequentially. For example, one might have to tune a type of neural network learned across a series of different classification problems. Recent work on multi-task BO exploits knowledge gained from previous hyperparameter tuning tasks to speed up a new tuning task. However, previous approaches do not account for the fact that BO is a sequential decision making procedure. Hence, there is in general a mismatch between the number of evaluations collected in the current tuning task compared to the number of evaluations accumulated in all previously completed tasks. In this work, we enable multi-task BO to compensate for this mismatch, such that the transfer learning procedure is able to handle different data regimes in a principled way. We propose a new multi-task BO method that learns a set of ordered, non-linear basis functions of increasing complexity via nested drop-out and automatic relevance determination. Experiments on a variety of hyperparameter tuning problems show that our method improves the sample efficiency of recently published multi-task BO methods.
+<br>
 
 
           <br>
