--- a/i_talks.html
+++ b/i_talks.html
@@ -54,6 +54,11 @@ of Mathematical Sciences, National University of Singapore, Singapore, August 3-
 </p>
 
 <p>
+<a href="http://www.mathdatalab.org">Mathematics of Complex Data</a>, KTH Royal Institute of Technology, Stockholm, Sweden, June 8-11, 2020 (invited) <span class="important">postponed until June 2022 due to Covid-19</span>
+</p>
+
+
+<p>
 <a href="https://www.polyu.edu.hk/ama/events/conference/op20/en/">SIAM Conference on Optimization,</a> The Hong Kong Polytechnic
 University, Hong Kong, China, May 26-29, 2020 (organizing committee member) <span class="important">postponed until 2021 due to Covid-19</span>
 </p>
@@ -62,9 +67,6 @@ University, Hong Kong, China, May 26-29, 2020 (organizing committee member) <spa
 Mathematics Research Seminar, Seoul National University, Seoul, South Korea, June 2020 (invited) <span class="important">postponed due to Covid-19</span>
 </p>
 
-<p>
-<a href="http://www.mathdatalab.org">Mathematics of Complex Data</a>, KTH Royal Institute of Technology, Stockholm, Sweden, June 8-11, 2020 (invited) <span class="important">postponed due to Covid-19</span>
-</p>
 
 <p>
 AI: Collaborate and Accelerate, College of Computer Sciences and Information Technology (CCSIT), King Faisal University, Al-Ahsa, Saudi Arabia, April 8, 2020 (keynote speaker) <span class="important">cancelled due to Covid-19</span>
@@ -88,6 +90,15 @@ session organizer) <span class="important">postponed due to Covid-19</span>
 
 <h1>Video Talks</h1>
 
+<p>
+<a href="https://www.youtube.com/watch?v=jqgyjN5kLqo">"Beyond Local and Gradient Methods for Federated Learning"</a> (80 mins)
+<br> Federated Learning One World Seminar, 4/2021
+</p>
+
+<p>
+<a href="">"Distributed Second Order Methods with Fast Rates and Compressed Communication"</a> 
+<br> All Russian Optimization Seminar, 4/2021
+</p>
 
 
 <p>
@@ -163,6 +174,16 @@ Simons Institute, Berkeley, 10/2013
 
 
 <h1>2021 Talks</h1>
+
+<p>
+[178] Talk 2 (TBA)  <a href="https://cemse.kaust.edu.sa/ai/aii-conf-2021">KAUST Conference on Artificial Intelligence</a>, KAUST, Thuwal, Saudi Arabia,  April 29, 2021
+</p>
+
+
+<p>
+[177] Talk 1 (TBA)  <a href="https://cemse.kaust.edu.sa/ai/aii-conf-2021">KAUST Conference on Artificial Intelligence</a>, KAUST, Thuwal, Saudi Arabia,  April 28, 2021
+</p>
+
 
 <p>
 [176] "Optimization for Machine Learning", <a href="https://ima.org.uk/14347/14347/">3rd Mathematics of Operational Research conference</a>, Aston University, Birmingham (UK),  April 22-23, 2021
