--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 
          <br><br>
-         The talk was recorded and will be uploaded to the <a href="https://www.youtube.com/channel/UCpAXM9I-v76xEPtevcCuA5g/videos">FLOW YouTube channel.</a>
+         The talk was recorded and is now available on <a href="https://www.youtube.com/watch?v=jqgyjN5kLqo">YouTube.</a>
           <br>
 
           <br>
