--- a/index.html
+++ b/index.html
@@ -64,8 +64,15 @@
 
 
          <br><br>
-         The talk was recorded and is now available on <a href="https://www.youtube.com/watch?v=jqgyjN5kLqo">YouTube.</a>
-          <br>
+         The talk was recorded and is now available on      YouTube:
+
+
+         <br>
+         <a href="https://www.youtube.com/watch?v=jqgyjN5kLqo"><img alt="" src="imgs/Newton-Learn-FLOW-small.png" width="750"></a>
+         <br>
+
+
+
 
           <br>
           <br>
