All Russian seminar Youtube video

--- a/index.html
+++ b/index.html
@@ -136,8 +136,18 @@ We prove that our method can solve the problems without any increase in the numb
         Today I am giving a talk at the <a href="http://www.mathnet.ru/php/conference.phtml?&eventID=31&confid=1794&option_lang=eng">All Russian Seminar in Optimization.</a> I am talking about the paper <a href="https://arxiv.org/abs/2102.07158">Distributed Second Order Methods with Fast Rates and Compressed Communication</a>, which is joint work with
         <a href="https://rustem-islamov.github.io">Rustem Islamov (KAUST and MIPT)</a> and <a href="https://qianxunk.github.io">Xun Qian (KAUST)</a>.
 
+
          <br><br>
-         The talk was recorded and will eventually be put on <a href="https://www.youtube.com/user/PreMoLab/videos">YouTube</a>.
+         The talk was recorded and uploaded to  YouTube:
+
+         <br>
+         <a href="https://www.youtube.com/watch?v=_1q-vt0nu44"><img alt="" src="imgs/Newton-Learn-All-Russian-seminar-small.png" width="750"></a>
+         <br>
+
+
+
+        <br>
+
         Here are the <a href="talks/TALK-2021-Newton-Learn.pdf">slides from my talk</a>, and here is a
           <a href="posters/Poster-Newton-Learn.pdf"> poster </a> that will son be presented by Rustem Islamov at the <a href="https://sites.google.com/ucsd.edu/cedo/">NSF-TRIPODS Workshop on Communication Efficient Distributed Optimization.</a>
           <br>
