--- a/index.html
+++ b/index.html
@@ -46,6 +46,30 @@
 
 
 
+          <h3>April 21, 2021</h3>
+          <h1>Area Editor for Journal of Optimization Theory and Applications</h1>
+          <br>
+
+      I have just become an <a href="https://www.springer.com/journal/10957/editors">Area Editor</a> for <a href="https://www.springer.com/journal/10957">Journal on Optimization Theory and Applications (JOTA)</a>, representing the area
+      "Optimization and Machine Learning". Consider sending your best optimizaiton for machine learning papers to JOTA! We aim to provide fast and high quality reviews. <br> <br>
+
+      Established in 1967, JOTA is one of the oldest optimization journals. For example, Mathematical Programming was established in 1972, SIAM J on Control and Optimization in 1976, and SIAM J on Optimization in 1991.
+
+        <br><br>
+
+       According to Google Scholar Metrics, JOTA is one of the top optimization journals: <br>
+
+       <br>
+       <a href="https://scholar.google.com/citations?view_op=top_venues&hl=en&vq=phy_mathematicaloptimization"><img alt="" src="imgs/JOTA-GoogleScholarMetrics-2021-small.png" width="750"></a>
+       <br>
+
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
 
 
 
