--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <br><br>
 
-       According to Google Scholar Metrics, JOTA is one of the top optimization journals: <br>
+       According to <a href="https://scholar.google.com/citations?view_op=top_venues&hl=en&vq=phy_mathematicaloptimization">Google Scholar Metrics</a>, JOTA is one of the top optimization journals: <br>
 
        <br>
        <a href="https://scholar.google.com/citations?view_op=top_venues&hl=en&vq=phy_mathematicaloptimization"><img alt="" src="imgs/JOTA-GoogleScholarMetrics-2021-small.png" width="750"></a>
