--- a/i_papers.html
+++ b/i_papers.html
@@ -51,6 +51,11 @@
 
           <h1> Prepared in 2021 </h1>
 
+          [160] Grigory Malinovsky, Alibek Sailanbayev and Peter Richtárik<br>
+          <b>Random reshuffling with variance reduction: new analysis and better rates</b><br>
+          [<a href="https://arxiv.org/abs/2104.09342">arXiv</a>]  <br>
+          <br>          
+
           [159] Adil Salim, Laurent Condat, Dmitry Kovalev and Peter Richtárik<br>
           <b>An optimal algorithm for strongly convex minimization under affine constraints</b><br>
           [<a href="https://arxiv.org/abs/2102.11079">arXiv</a>]  <br>
