--- a/i_team.html
+++ b/i_team.html
@@ -75,7 +75,7 @@
             <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a> (1/2020-present)</li>
             <li><a href="http://elnurgasanov.me">Elnur Gasanov</a> (1/2020-present)</li>
             <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a>  (1/2019-present)</li>
-            <li><a href="https://vcc.kaust.edu.sa/Pages/Sailanbayev.aspx">Alibek Sailanbayev</a>  (1/2019-present)</li>
+            <li><a href="https://cemse.kaust.edu.sa/people/person/alibek-sailanbayev">Alibek Sailanbayev</a>  (1/2019-present)</li>
             <li><a href="https://konstmish.github.io/">Konstantin Mishchenko</a> (9/2017-present)</li>
             <li><a href="https://fhanzely.github.io/index.html">Filip Hanzely</a> (9/2017-7/2020) <br>
               thesis: <a href="https://arxiv.org/abs/2008.11824">Optimization for Supervised Machine Learning: Randomized Algorithms for Data and Parameters</a> <br>
@@ -94,7 +94,7 @@
             <li><a href="http://elnurgasanov.me">Elnur Gasanov</a> (9/2018-12/2019)</li>
             <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a> (9/2018-12/2019)</li>
             <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a> (8/2017-12/2018)</li>
-            <li><a href="https://vcc.kaust.edu.sa/Pages/Sailanbayev.aspx">Alibek Sailanbayev</a> (8/2017-12/2018)</li>
+            <li><a href="https://cemse.kaust.edu.sa/people/person/alibek-sailanbayev">Alibek Sailanbayev</a> (8/2017-12/2018)</li>
 
           </ul>
 
