--- a/index.html
+++ b/index.html
@@ -72,6 +72,49 @@
 
 
 
+          <h3>April 22, 2021</h3>
+          <h1>Talk at AMCS/STAT Graduate Seminar at KAUST</h1>
+          <br>
+
+        Today I gave a talk entitled "Distributed second order methods with fast rates and compressed communication" at
+        the AMCS/STAT Graduate Seminar at KAUST. Here is the <a href="https://cemse.kaust.edu.sa/events/event/distributed-second-order-methods-fast-rates-and-compressed-communication">official KAUST blurb.</a> I talked about
+        the paper <a href="https://arxiv.org/abs/2102.07158">Distributed Second Order Methods with Fast Rates and Compressed Communication</a>.
+        This is joint work with my fantastic intern <a href="https://rustem-islamov.github.io">Rustem Islamov</a> (KAUST and MIPT) and fantastic
+        postdoc <a href="https://qianxunk.github.io">Xun Qian</a> (KAUST). <br>
+
+
+
+        <br>
+        <br>
+        <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+        <br>
+        <br>
+
+
+
+        <h3>April 19, 2021</h3>
+        <h1>New Paper</h1>
+        <br>
+
+        <span class="important">New paper out: </span>
+        <a href="https://arxiv.org/abs/2104.09342">"Random Reshuffling with Variance Reduction: New Analysis and Better Rates"</a> -
+        joint work with
+        <a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> and
+        <a href="https://cemse.kaust.edu.sa/people/person/alibek-sailanbayev">Alibek Sailanbayev</a>.<br>
+        <br>
+
+        Abstract: <i>
+         Virtually all state-of-the-art methods for training supervised machine learning models are variants of SGD enhanced with a number of additional tricks, such as minibatching, momentum, and adaptive stepsizes. One of the tricks that works so well in practice that it is used as default in virtually all widely used machine learning software is {\em random reshuffling (RR)}. However, the practical benefits of RR have until very recently been eluding attempts at being satisfactorily explained using theory. Motivated by recent development due to Mishchenko, Khaled and Richt\'{a}rik (2020), in this work we provide the first analysis of SVRG under Random Reshuffling (RR-SVRG) for general finite-sum problems. First, we show that RR-SVRG converges linearly with the rate $O(\kappa^{3/2})$ in the strongly-convex case, and can be improved further to $O(\kappa)$ in the big data regime (when $n > O(\kappa)$), where $\kappa$ is the condition number. This improves upon the previous best rate $O(\kappa^2)$ known for a variance reduced RR method in the strongly-convex case due to Ying, Yuan and Sayed (2020). Second, we obtain the first sublinear rate for general convex problems. Third, we establish similar fast rates for Cyclic-SVRG and Shuffle-Once-SVRG. Finally, we develop and analyze a more general variance reduction scheme for RR, which allows for less frequent updates of the control variate. We corroborate our theoretical results with suitably chosen experiments on synthetic and real datasets.
+        </i>
+        <br>
+
+        <br>
+        <br>
+        <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+        <br>
+        <br>
+
+
 
 
           <h3>April 14, 2021</h3>
