--- a/i_papers.html
+++ b/i_papers.html
@@ -54,7 +54,7 @@
           [160] Grigory Malinovsky, Alibek Sailanbayev and Peter Richtárik<br>
           <b>Random reshuffling with variance reduction: new analysis and better rates</b><br>
           [<a href="https://arxiv.org/abs/2104.09342">arXiv</a>]  <br>
-          <br>          
+          <br>
 
           [159] Adil Salim, Laurent Condat, Dmitry Kovalev and Peter Richtárik<br>
           <b>An optimal algorithm for strongly convex minimization under affine constraints</b><br>
@@ -80,6 +80,7 @@
 
           [155] Eduard Gorbunov, Konstantin Burlachenko, Zhize Li and Peter Richtárik<br>
           <b>MARINA: faster non-convex distributed learning with compression </b><br>
+          <a href="https://sites.google.com/ucsd.edu/cedo/"> NSF-TRIPODS Workshop: Communication Efficient Distributed Optimization </a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2102.07845">arXiv</a>] [code: MARINA, VR-MARINA, PP-MARINA]  <br>
           <br>
