--- a/i_talks.html
+++ b/i_talks.html
@@ -96,10 +96,9 @@ session organizer) <span class="important">postponed due to Covid-19</span>
 </p>
 
 <p>
-<a href="">"Distributed Second Order Methods with Fast Rates and Compressed Communication"</a> 
+<a href="https://www.youtube.com/watch?v=_1q-vt0nu44">"Distributed Second Order Methods with Fast Rates and Compressed Communication"</a>
 <br> All Russian Optimization Seminar, 4/2021
 </p>
-
 
 <p>
 <a href="https://www.youtube.com/watch?v=wXyXjTgINJI&list=PLqrJF7iQbscALPio49SSil8XDbfNAlOTO&index=1">"On Second Order Methods and Randomness"</a> (72 mins)
