--- a/i_team.html
+++ b/i_team.html
@@ -86,7 +86,7 @@
           <h2>MS Students </h2>
           <ul>
 
-            <li>Igor Sokolov (8/2020-present)</li>
+            <li><a href="https://cemse.kaust.edu.sa/people/person/igor-sokolov">Igor Sokolov</a> (8/2020-present)</li>
             <li><a href="https://grigory-malinovsky.github.io">Grigory Malinovsky</a> (8/2020-present)</li>
             <li><a href="https://shulgin-egor.github.io">Egor Shulgin</a> (1/2020-present)</li>
             <li><a href="https://alyazeedbasyoni.wixsite.com/blog">Alyazeed Basyoni</a> (8/2019-12/2020)</li>
