KAUST AI Conference - April 2021 - 17 short talks

--- a/i_papers.html
+++ b/i_papers.html
@@ -262,7 +262,7 @@
 
           [128] Grigory Malinovsky, Dmitry Kovalev, Elnur Gasanov, Laurent Condat, and Peter Richtárik <br>
           <b>From local SGD to local fixed point methods for federated learning</b><br>
-          ICML 2020 <br>
+          <a href="http://proceedings.mlr.press/v119/malinovskiy20a.html">ICML 2020</a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2004.01442">arXiv</a>] [code: LDFPM, RDFPM] <br>
           <br>
