--- a/index.html
+++ b/index.html
@@ -46,6 +46,110 @@
 
 
 
+<h3>April 28, 2021</h3>
+<h1>KAUST Conference on Artifical Intelligence: 17 Short (up to 5 min) Talks by Members of my Team!</h1>
+<br>
+
+
+
+
+A talk by Konstantin Burlachenko (<a href="https://arxiv.org/abs/2102.07845">paper</a>):
+<br>
+<a href="https://www.youtube.com/watch?v=o5MwC4DYbGE&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=33"><img alt="" src="imgs/KAUST-AI-Conference-2021-Spotlight-Talk-Burlachenko.png" width="350"></a>
+<br>
+
+A talk by Laurent Condat (<a href="http://proceedings.mlr.press/v119/malinovskiy20a.html">paper</a>):
+<br>
+<a href="https://www.youtube.com/watch?v=-QgQp5HnWQY&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=27"><img alt="" src="imgs/KAUST-AI-Conference-2021-Spotlight-Talk-Condat.png" width="350"></a>
+<br>
+
+A talk by Eduard Gorbunov (<a href="https://papers.nips.cc/paper/2020/hash/ef9280fbc5317f17d480e4d4f61b3751-Abstract.html">paper</a>):
+<br>
+<a href="https://www.youtube.com/watch?v=6Hpt6hbzgjU&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=37"><img alt="" src="imgs/KAUST-AI-Conference-2021-Spotlight-Talk-Gorbunov.png" width="350"></a>
+<br>
+
+A talk by Filip Hanzely (<a href="http://proceedings.mlr.press/v130/gorbunov21a.html">paper</a>):
+<br>
+<a href="https://www.youtube.com/watch?v=u_KoimUuc6k&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx"><img alt="" src="imgs/KAUST-AI-Conference-2021-Spotlight-Talk-Hanzely.png" width="350"></a>
+<br>
+
+A talk by Slavomir Hanzely:
+<br>
+<a href="https://www.youtube.com/watch?v=YkZeROHXahc&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=34"><img alt="" src="imgs/KAUST-AI-Conference-2021-Spotlight-Talk-Slavomir-Hanzely.png" width="350"></a>
+<br>
+
+A talk by Samuel Horvath:
+<br>
+<a href="https://www.youtube.com/watch?v=M3zHT_qieB4&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=32"><img alt="" src="imgs/KAUST-AI-Conference-2021-Spotlight-Talk-Horvath.png" width="350"></a>
+<br>
+
+A talk by Rustem Islamov:
+<br>
+<a href="https://www.youtube.com/watch?v=iSKBZXlaoWo&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=40"><img alt="" src="imgs/KAUST-AI-Conference-2021-Spotlight-Talk-Islamov.png" width="350"></a>
+<br>
+
+A talk by Ahmed Khaled:
+<br>
+<a href="https://www.youtube.com/watch?v=aHAU6OYNoKA&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=39"><img alt="" src="imgs/KAUST-AI-Conference-2021-Spotlight-Talk-Khaled.png" width="350"></a>
+<br>
+
+A talk by Dmitry Kovalev:
+<br>
+<a href="https://www.youtube.com/watch?v=0bAgav0x-8U&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=31"><img alt="" src="imgs/KAUST-AI-Conference-2021-Spotlight-Talk-Kovalev.png" width="350"></a>
+<br>
+
+A talk by Zhize Li:
+<br>
+<a href="https://www.youtube.com/watch?v=_K3XPxN-vdk&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=28"><img alt="" src="imgs/KAUST-AI-Conference-2021-Spotlight-Talk-Li.png" width="350"></a>
+<br>
+
+A talk by Grigory Malinovsky:
+<br>
+<a href="https://www.youtube.com/watch?v=DK9CJmz6SR8&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=35"><img alt="" src="imgs/KAUST-AI-Conference-2021-Spotlight-Talk-Malinovsky.png" width="350"></a>
+<br>
+
+A talk by Konstantin Mishchenko:
+<br>
+<a href="https://www.youtube.com/watch?v=0ZZY5Y_6fd4&list=PLC28kDljnOrh4XxzWpOFBIu8IHjJzmKQs"><img alt="" src="imgs/KAUST-AI-Conference-2021-Spotlight-Talk-Mishchenko.png" width="350"></a>
+<br>
+
+A talk by Xun Qian:
+<br>
+<a href="https://www.youtube.com/watch?v=QMJDOtm9wxk&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=29"><img alt="" src="imgs/KAUST-AI-Conference-2021-Spotlight-Talk-Qian.png" width="350"></a>
+<br>
+
+A talk by Mher Safaryan:
+<br>
+<a href="https://www.youtube.com/watch?v=vSD-smU0JjE&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=45"><img alt="" src="imgs/KAUST-AI-Conference-2021-Spotlight-Talk-Safaryan.png" width="350"></a>
+<br>
+
+A talk by Adil Salim:
+<br>
+<a href="https://www.youtube.com/watch?v=jz_ylyAhkL8&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=30"><img alt="" src="imgs/KAUST-AI-Conference-2021-Spotlight-Talk-Salim.png" width="350"></a>
+<br>
+
+A talk by Egor Shulgin:
+<br>
+<a href="https://www.youtube.com/watch?v=jO3t4eZFdkc&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=36"><img alt="" src="imgs/KAUST-AI-Conference-2021-Spotlight-Talk-Shulgin.png" width="350"></a>
+<br>
+
+A talk by Bokun Wang:
+<br>
+<a href="https://www.youtube.com/watch?v=-YjXDdwkeqc&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=38"><img alt="" src="imgs/KAUST-AI-Conference-2021-Spotlight-Talk-Wang.png" width="350"></a>
+<br>
+
+
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
           <h3>April 21, 2021</h3>
           <h1>Area Editor for Journal of Optimization Theory and Applications</h1>
           <br>
