--- a/index.html
+++ b/index.html
@@ -50,11 +50,18 @@
 <h1>KAUST Conference on Artifical Intelligence: 17 Short (up to 5 min) Talks by Members of my Team!</h1>
 <br>
 
-Today and tomorrow I am attending the KAUST Conference on AI. Anyone can attend for free by watching the <a href="https://kaust.zoom.us/j/96464686903">LIVE Zoom webinar stream.</a> Today I have given a short 20
+Today and tomorrow I am attending the <a href="https://cemse.kaust.edu.sa/ai/aii-conf-2021">KAUST Conference on Artificial Intelligence</a>. Anyone can attend for free by watching the <a href="https://kaust.zoom.us/j/96464686903">LIVE Zoom webinar stream.</a> Today I have given a short 20
   min talk today entitled "Recent Advances in Optimization for Machine Learning". I will deliver another 20 min talk tomorrow, entitled "On Solving a Key Challenge in Federated Learning: Local Steps, Compression
-  and Personalization". More importantly, 17 of my Lab members (research scientists, postdocs, PhD students,  MS students and interns) have prepared short videos on selected recent papers coming from the
+  and Personalization".
+<br>
+<br>
+
+
+  More importantly, 17 of my Lab members (research scientists, postdocs, PhD students,  MS students and interns) have prepared short videos on selected recent papers coming from the
   "Optimization and Machine Learning Lab" that I lead. This includes 9 papers from 2021, 7 papers from 2020 and 1 paper from 2019. Please check out their videos talks!
 
+  <br>
+  <br>
 
 
 A talk by Konstantin Burlachenko (<a href="https://arxiv.org/abs/2102.07845">paper</a>):
