--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
 <h3>April 28, 2021</h3>
-<h1>KAUST Conference on Artifical Intelligence: 17 Short (up to 5 min) Talks by Members of my Team!</h1>
+<h1>KAUST Conference on Artificial Intelligence: 17 Short (up to 5 min) Talks by Members of my Team!</h1>
 <br>
 
 Today and tomorrow I am attending the <a href="https://cemse.kaust.edu.sa/ai/aii-conf-2021">KAUST Conference on Artificial Intelligence</a>. Anyone can attend for free by watching the <a href="https://kaust.zoom.us/j/96464686903">LIVE Zoom webinar stream.</a> Today I have given a short 20
@@ -57,8 +57,9 @@ Today and tomorrow I am attending the <a href="https://cemse.kaust.edu.sa/ai/aii
 <br>
 
 
-  More importantly, 17 of my Lab members (research scientists, postdocs, PhD students,  MS students and interns) have prepared short videos on selected recent papers coming from the
-  "Optimization and Machine Learning Lab" that I lead. This includes 9 papers from 2021, 7 papers from 2020 and 1 paper from 2019. Please check out their videos talks!
+  More importantly, 17 members (research scientists, postdocs, PhD students,  MS students and interns) of the "Optimization and Machine Learning Lab"  that I lead at KAUST have
+  prepared short videos on selected recent papers they co-athored. This includes 9 papers from 2021, 7 papers from 2020 and 1 paper from 2019. Please check out their videos talks!
+  Here they are:
 
   <br>
   <br>
