--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Today and tomorrow I am attending the <a href="https://cemse.kaust.edu.sa/ai/aii
 
 
   More importantly, 17 members (research scientists, postdocs, PhD students,  MS students and interns) of the "Optimization and Machine Learning Lab"  that I lead at KAUST have
-  prepared short videos on selected recent papers they co-athored. This includes 9 papers from 2021, 7 papers from 2020 and 1 paper from 2019. Please check out their videos talks!
+  prepared short videos on selected recent papers they co-athored. This includes 9 papers from 2021, 7 papers from 2020 and 1 paper from 2019. Please check out their video talks!
   Here they are:
 
   <br>
