--- a/index.html
+++ b/index.html
@@ -51,7 +51,20 @@
 <br>
 
 Today and tomorrow I am attending the <a href="https://cemse.kaust.edu.sa/ai/aii-conf-2021">KAUST Conference on Artificial Intelligence</a>. Anyone can attend for free by watching the <a href="https://kaust.zoom.us/j/96464686903">LIVE Zoom webinar stream.</a> Today I have given a short 20
-  min talk today entitled "Recent Advances in Optimization for Machine Learning". I will deliver another 20 min talk tomorrow, entitled "On Solving a Key Challenge in Federated Learning: Local Steps, Compression
+  min talk today entitled "Recent Advances in Optimization for Machine Learning". Here are my slides:
+
+
+  <br>
+
+  <br>
+  <a href="slides/Talk-1-KAUST-AI-Conference-2021.pdf"><img alt="" src="imgs/KAUST-AI-Conference-2021-Talk-Richtarik.png" width="350"></a>
+  <br>
+
+
+<br>
+
+
+   I will deliver another 20 min talk tomorrow, entitled "On Solving a Key Challenge in Federated Learning: Local Steps, Compression
   and Personalization".
 <br>
 <br>
